# aiTour

./: .gitignore  404.html  CNAME  LICENSE  README.md  future-plans.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  template.md
.github/workflows/: ci.yml
AI-introduction/resources/: index.html
AI4science/resources/: index.html
advanced-linear-algebra/MATH120011/: index.html
afterword/: index.html
assets/javascripts/: graph.json
assets/stylesheets/: changelog.css  interactive_graph.css
c++/C++-Primer-Plus/: index.html
c++/CS106B/: index.html
calculus/18.0x/: index.html
changelog/: index.html
compiler/resources/: index.html
computer-architecture/CS61c/: index.html
computer-system/CS15213/: index.html
computer-vision/EECS498-007/: index.html
computer-vision/EECS498.008/: index.html
computer-vision/ML-4360/: index.html
convex-optimization/CMU10-725/: index.html
convex-optimization/EE364A/: index.html
cuda-programming/resources/: index.html
da-yi-han-jia/algorithm/: index.html
da-yi-han-jia/data-analysis/: index.html
da-yi-han-jia/data-structure/: index.html
da-yi-shang/c++/: index.html
da-yi-shang/calculus-1/: index.html
da-yi-shang/discrete-math/: index.html
da-yi-shang/linear-algebra/: index.html
docs/: CNAME  afterword.md  changelog.md  changelog.yml  how-to-ask-questions.md  index.md  learning-path.md  preparations.md
how-to-ask-questions/: index.html
learning-path/: index.html
preparations/: index.html
search/: search_index.json
templates/: template.book.md  template.course.md
(+186 files in other folders)
